# backend-rs

./: .env.example  COMMIT_GUIDELINES.md  Cargo.toml  Makefile  README.md  docker-compose.yml
.github/workflows/: rust.yml
api/actix/: Cargo.toml
api/actix/migrations/: 0001_user_table.sql
api/actix/src/: main.rs  prelude.rs
api/actix/src/apps/auth/: mod.rs  models.rs  urls.rs  views.rs
api/actix/src/apps/user/: models.rs  urls.rs  views.rs
api/actix/src/routes/: auth.rs
api/db/: Cargo.toml
api/db/migrations/: 0001_init_tables.sql  0001_user_table.sql
api/db/src/: lib.rs
api/lib/: Cargo.toml
api/models/: Cargo.toml
api/models/src/: lib.rs  user.rs
migrations/: 0001_init_tables.sql  0001_user_table.sql
scripts/: create_db  init.sql
shared/: Cargo.toml
shared/src/: lib.rs
src/: lib.rs  main.rs
