[workspace]
members = ["api/lib", "api/actix", "api/db", "shared"]

[workspace.dependencies]
shared = { path = "./shared" }
api-lib = { path = "./api/lib" }
actix-web = "4.4"
sqlx = { version = "0.7", features = [
  "runtime-tokio",
  "postgres",
  "macros",
  "chrono",
  "json",
  "uuid",
  "migrate",
] }
serde = { version = "1", features = ["derive"] }
uuid = { version = "1.4", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
color-eyre = "0.6"
tracing = "0.1"
dotenv = "0.15"
