[package]
name = "api-actix"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
api-lib = { workspace = true }
api-db = { workspace = true }
sqlx = { workspace = true }
actix-web = { workspace = true }
dotenv = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "json",
  "time",
] }
color-eyre = { workspace = true }
