[package]
name = "api-actix"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
api-lib = { workspace = true }
api-models = { workspace = true }
shared = { workspace = true }
sqlx = { workspace = true }
actix-web = { workspace = true }
dotenv = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "json",
  "time",
] }
color-eyre = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }

actix-web-httpauth = "0.8"
argonautica = "0.2"
hmac = "0.12"
jwt = "0.16"
sha2 = "0.10"
